Fix gleam and table alignemtn:

--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -6,5 +6,11 @@
 .table-wrapper>table tbody tr td {
     padding: .4rem 1rem;
     font-size: 95%;
-    white-space: normal
+    white-space: normal;
+    vertical-align: top;
+    
 }
+
+.shimmer::before{
+    background:none;
+ }
